# modalSolver

./: README.md  environment.yml  pyproject.toml  run_in_wsl.ps1
report/: report.qmd
results/: modal_analysis_results.md
results/modes_variantA/: mode_01.h5  mode_02.h5  mode_03.h5  mode_04.h5  mode_05.h5  mode_05.xdmf  mode_06.h5
results/modes_variantB/: mode_01.h5  mode_01.xdmf  mode_02.h5  mode_02.xdmf  mode_03.h5  mode_03.xdmf  mode_04.h5  mode_04.xdmf  mode_05.h5  mode_06.h5  mode_06.xdmf
scripts/: run_convergence.py  run_scenario_study.py
src/: __init__.py  geometry.py  solver.py  visualization.py
tests/: test_verification.py
