[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modalSolver"
version = "0.1.0"
description = "A FEniCSx and SLEPc based eigenfrequency solver for slender structures"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "MSSD Student" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "pytest>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
